refactoring message ops
git-svn-id: http://svn.ordoacerbus.com/mailtool@4 0d663b42-f6fb-4899-8368-86f26f307223

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=/usr/local/netbeans-6.5/java2/modules/ext/jaxws21/api:/usr/local/netbeans-6.5/ide10/modules/ext/jaxb/api
-user.properties.file=/home/edward/.netbeans/6.5/build.properties
+jaxws.endorsed.dir=/home/edward/.netbeans/6.7/modules/ext/jaxws21/api:/home/edward/.netbeans/6.7/modules/ext/jaxb/api
+user.properties.file=/home/edward/.netbeans/6.7/build.properties
