--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 application.title=MyMailTool
 application.vendor=edward
 build.classes.dir=${build.dir}/classes
@@ -20,16 +23,20 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/MyMailTool.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.Args4j.classpath}:\
     ${libs.JavaMail.classpath}:\
-    ${libs.Joda.classpath}
+    ${libs.Joda.classpath}:\
+    ${libs.Guava.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -51,6 +58,7 @@ javadoc.windowtitle=
 main.class=org.ethelred.mymailtool.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
