--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,10 @@ dependencies {
     testImplementation group: 'org.jmock', name: 'jmock', version: '2.12.0'
     testImplementation group: 'org.jmock', name: 'jmock-legacy', version: '2.12.0'
 
-    rewrite('org.ethelred:ethelred-rewrite:0.3-6-ga72db15.dirty')
-    rewrite("org.openrewrite.recipe:rewrite-logging-frameworks:latest.release")
+//    rewrite('org.ethelred:ethelred-rewrite:0.3-6-ga72db15.dirty')
+//    rewrite("org.openrewrite.recipe:rewrite-logging-frameworks:latest.release")
+    rewrite("org.openrewrite.recipe:rewrite-migrate-java:1.10.0")
+
 }
 
 task install {
@@ -54,6 +56,12 @@ task cleanBin(type: Delete) {
 clean.dependsOn cleanBin
 
 rewrite {
-    rewriteVersion = "7.30.0-SNAPSHOT"
-    activeRecipe('org.ethelred.rewrite.java.logging.jul.JulToLog4j2')
+//    rewriteVersion = "7.30.0-SNAPSHOT"
+//    activeRecipe('org.ethelred.rewrite.java.logging.jul.JulToLog4j2', "org.openrewrite.java.cleanup.Cleanup", "org.openrewrite.java.migrate.Java8toJava11", "org.openrewrite.java.cleanup.CommonStaticAnalysis")
+    activeRecipe(
+            "org.openrewrite.java.cleanup.Cleanup",
+            "org.openrewrite.java.migrate.Java8toJava11",
+            "org.openrewrite.java.cleanup.CommonStaticAnalysis"
+    )
+    exclusion('**/build.gradle')
 }
