--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation group: 'org.mozilla', name: 'rhino', version: '1.7.14'
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
     implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+    implementation 'org.ethelred:ethelred_util:0.4'
     runtimeOnly 'org.apache.logging.log4j:log4j-core:2.18.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
