--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     testImplementation group: 'org.jmock', name: 'jmock-legacy', version: '2.12.0'
 
 //    rewrite('org.ethelred:ethelred-rewrite:0.3-6-ga72db15.dirty')
-//    rewrite("org.openrewrite.recipe:rewrite-logging-frameworks:latest.release")
+    rewrite("org.openrewrite.recipe:rewrite-logging-frameworks:latest.release")
     rewrite("org.openrewrite.recipe:rewrite-migrate-java:1.10.0")
 
 }
@@ -60,9 +60,10 @@ rewrite {
 //    rewriteVersion = "7.30.0-SNAPSHOT"
 //    activeRecipe('org.ethelred.rewrite.java.logging.jul.JulToLog4j2', "org.openrewrite.java.cleanup.Cleanup", "org.openrewrite.java.migrate.Java8toJava11", "org.openrewrite.java.cleanup.CommonStaticAnalysis")
     activeRecipe(
-            "org.openrewrite.java.cleanup.Cleanup",
+            "org.openrewrite.java.logging.SystemPrintToLogging",
+//            "org.openrewrite.java.cleanup.Cleanup",
             "org.openrewrite.java.migrate.Java8toJava11",
-            "org.openrewrite.java.cleanup.CommonStaticAnalysis"
+//            "org.openrewrite.java.cleanup.CommonStaticAnalysis"
     )
     exclusion('**/build.gradle')
 }
