testing cleanup recipes again

--- a/build.gradle
+++ b/build.gradle
@@ -57,12 +57,12 @@ task cleanBin(type: Delete) {
 clean.dependsOn cleanBin
 
 rewrite {
-//    rewriteVersion = "7.30.0-SNAPSHOT"
+    rewriteVersion = "7.30.0-SNAPSHOT"
 //    activeRecipe('org.ethelred.rewrite.java.logging.jul.JulToLog4j2', "org.openrewrite.java.cleanup.Cleanup", "org.openrewrite.java.migrate.Java8toJava11", "org.openrewrite.java.cleanup.CommonStaticAnalysis")
     activeRecipe(
-            "org.openrewrite.java.logging.SystemPrintToLogging",
-//            "org.openrewrite.java.cleanup.Cleanup",
-            "org.openrewrite.java.migrate.Java8toJava11",
+//            "org.openrewrite.java.logging.SystemPrintToLogging",
+            "org.openrewrite.java.cleanup.Cleanup",
+//            "org.openrewrite.java.migrate.Java8toJava11",
 //            "org.openrewrite.java.cleanup.CommonStaticAnalysis"
     )
     exclusion('**/build.gradle')
