--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ rewrite {
     activeRecipe(
 //            "org.openrewrite.java.logging.SystemPrintToLogging",
             "org.openrewrite.java.cleanup.Cleanup",
-//            "org.openrewrite.java.migrate.Java8toJava11",
+            "org.openrewrite.java.migrate.Java8toJava11",
             "org.openrewrite.java.cleanup.CommonStaticAnalysis"
     )
     exclusion('**/build.gradle')
