--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 //    rewrite('org.ethelred:ethelred-rewrite:0.3-6-ga72db15.dirty')
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks:latest.release")
     rewrite("org.openrewrite.recipe:rewrite-migrate-java:1.10.0")
-
+    rewrite('org.apache.logging.log4j:log4j-api:2.18.0')
 }
 
 task install {
@@ -60,7 +60,7 @@ rewrite {
     rewriteVersion = "7.30.0-SNAPSHOT"
 //    activeRecipe('org.ethelred.rewrite.java.logging.jul.JulToLog4j2', "org.openrewrite.java.cleanup.Cleanup", "org.openrewrite.java.migrate.Java8toJava11", "org.openrewrite.java.cleanup.CommonStaticAnalysis")
     activeRecipe(
-//            "org.openrewrite.java.logging.SystemPrintToLogging",
+            "org.ethelred.PrintRecipe",
             "org.openrewrite.java.cleanup.Cleanup",
             "org.openrewrite.java.migrate.Java8toJava11",
             "org.openrewrite.java.cleanup.CommonStaticAnalysis"
