--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ java {
 application {
     mainClass = 'org.ethelred.mymailtool2.Main'
     applicationName = 'mymailtool2'
+    applicationDefaultJvmArgs = ['-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager']
 }
 
 dependencies {
@@ -28,9 +29,10 @@ dependencies {
     implementation group: 'joda-time', name: 'joda-time', version: '2.11.1'
     implementation group: 'org.mozilla', name: 'rhino', version: '1.7.14'
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
     implementation 'org.ethelred:ethelred_util:0.4'
-    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-jul:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'org.jmock', name: 'jmock', version: '2.12.0'
